--- a/tests/bluetooth/bsim_bt/bsim_test_mesh/prj_low_lat.conf
+++ b/tests/bluetooth/bsim_bt/bsim_test_mesh/prj_low_lat.conf
@@ -1,6 +1,7 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=32768
 
 # Bluetooth configuration
 CONFIG_BT=y
