--- a/tests/bluetooth/bsim_bt/bsim_test_mesh/prj_pst.conf
+++ b/tests/bluetooth/bsim_bt/bsim_test_mesh/prj_pst.conf
@@ -1,6 +1,7 @@
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_CUSTOM=y
 CONFIG_BT_MESH_DEBUG_SETTINGS=y
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=32768
 
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
