dts: spi: Add property for cs delay
This is a common field for the configuration of CS lines in the SPI
layer.  But, there is no way to set it from the device tree.

Add the property "spi-cs-delay" for this.  This is added to the spi
client device node, as the delay is set per device.  Linux has similar
SPI delay properties, but doesn't use the same kind of delay, so it
can't be exactly the same.

Update the macros for getting SPI devices from the device tree to look
for this property.

Previously, delay needed to be explicitly added by the driver as a macro
argument.  Keep the interface the same, but change the semantics so the
macro delay argument is the default delay value.  The device tree
property spi-cs-delay will, if set, override the default.

There are only two users of this delay in the Zephyr code base.  One is
eswifi and the other is spi_nor.  The former has a fixed value specified
in the driver code and the latter uses a config variable.

This change should work fine with both.  It offers an improvement to the
spi-nor driver: it doesn't require delay to be the same for every
spi-nor device.

I'm not clear why these users need the delay.  This feature was
originally created in PR #145, "SPI API update".  No discussion or
background information is present in the commit messages or PR.  It just
appeared as a new feature out of nowhere, with no users, when the API
changed.

The first and only users didn't appear until over a year later, in
PR #10988 for spi-nor and PR #10464 for cswifi.  I saw no discussion or
code comments about why the delay might be needed.

Signed-off-by: Trent Piepho <trent.piepho@igorinstitute.com>

--- a/dts/bindings/spi/spi-device.yaml
+++ b/dts/bindings/spi/spi-device.yaml
@@ -42,3 +42,10 @@ properties:
       enum:
         - 0
         - 32768
+    spi-cs-delay-us:
+       type: int
+       description: |
+         Additional delay, in microseconds, to add after asserting CS and before
+         de-asserting CS.  SPI drivers may specify this delay in their code as
+         well.  The value in the device tree, if present, will override the
+         default from driver or application code.
