--- a/boards/arm/raytac_mdbt50q_db_40/raytac_mdbt50q_db_40.dts
+++ b/boards/arm/raytac_mdbt50q_db_40/raytac_mdbt50q_db_40.dts
@@ -287,3 +287,9 @@ zephyr_udc0: &usbd {
 	compatible = "nordic,nrf-usbd";
 	status = "okay";
 };
+
+/ {
+   zephyr,user {
+      io-channels = <&adc 7>;
+   };
+};
