--- a/boards/arm/raytac_mdbt50q_db_40/raytac_mdbt50q_db_40.dts
+++ b/boards/arm/raytac_mdbt50q_db_40/raytac_mdbt50q_db_40.dts
@@ -126,7 +126,33 @@
 	};
 };
 
+/ {
+   zephyr,user {
+      io-channels = <&adc 4>;
+   };
+};
+
 &adc {
+   #address-cells = <1>;
+   #size-cells = <0>;
+ 
+   channel@0 {
+       reg = <0>;
+       zephyr,gain = "ADC_GAIN_1_6";
+       zephyr,reference = "ADC_REF_INTERNAL";
+       zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 20)>;
+       zephyr,input-positive = <NRF_SAADC_AIN6>;
+       zephyr,input-negative = <NRF_SAADC_AIN7>;
+   };
+ 
+   channel@1 {
+       reg = <1>;
+       zephyr,gain = "ADC_GAIN_1_6";
+       zephyr,reference = "ADC_REF_INTERNAL";
+       zephyr,acquisition-time = <ADC_ACQ_TIME_DEFAULT>;
+       zephyr,input-positive = <NRF_SAADC_AIN0>;
+   };
+   
 	status = "okay";
 };
 
@@ -286,10 +312,4 @@ arduino_spi: &spi3 {
 zephyr_udc0: &usbd {
 	compatible = "nordic,nrf-usbd";
 	status = "okay";
-};
-
-/ {
-   zephyr,user {
-      io-channels = <&adc 7>;
-   };
 };
