boards: nxp: add fields 'board_vendor' and 'soc_vendor'
Building up on the previous commit, the yaml files for all NXP boards
(for which NXP is the vendor) are augmented with the two fields listed
above. The value for both fields is set to to 'NXP'

Signed-off-by: Yves Vandervennet <yves.vandervennet@nxp.com>

--- a/boards/arm/frdm_k22f/frdm_k22f.yaml
+++ b/boards/arm/frdm_k22f/frdm_k22f.yaml
@@ -2,6 +2,8 @@ identifier: frdm_k22f
 name: NXP FRDM-K22F
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 ram: 64
 toolchain:
   - zephyr
