--- a/boards/arm/lpcxpresso51u68/lpcxpresso51u68.yaml
+++ b/boards/arm/lpcxpresso51u68/lpcxpresso51u68.yaml
@@ -7,6 +7,8 @@
 identifier: lpcxpresso51u68
 name: NXP LPCXpresso51u68
 type: mcu
+board_vendor: nxp
+soc_vendor: nxp
 arch: arm
 ram: 64
 flash: 256
