--- a/boards/arm/mimx8mp_evk/mimx8mp_evk_ddr.yaml
+++ b/boards/arm/mimx8mp_evk/mimx8mp_evk_ddr.yaml
@@ -8,6 +8,8 @@ identifier: mimx8mp_evk_ddr
 name: NXP i.MX8M Plus EVK (DDR)
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 ram: 2048
 flash: 2048
 toolchain:
