--- a/boards/arm/frdm_k64f/frdm_k64f.yaml
+++ b/boards/arm/frdm_k64f/frdm_k64f.yaml
@@ -2,6 +2,8 @@ identifier: frdm_k64f
 name: NXP FRDM-K64F
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 ram: 256
 flash: 1024
 toolchain:
