--- a/boards/arm/lpcxpresso54114/lpcxpresso54114_m0.yaml
+++ b/boards/arm/lpcxpresso54114/lpcxpresso54114_m0.yaml
@@ -7,6 +7,8 @@
 identifier: lpcxpresso54114_m0
 name: NXP LPCXpresso54114 M0
 type: mcu
+board_vendor: nxp
+soc_vendor: nxp
 arch: arm
 ram: 32
 flash: 64
