--- a/boards/arm/lpcxpresso55s06/lpcxpresso55s06.yaml
+++ b/boards/arm/lpcxpresso55s06/lpcxpresso55s06.yaml
@@ -6,6 +6,8 @@
 identifier: lpcxpresso55s06
 name: NXP LPCXpresso55S06
 type: mcu
+board_vendor: nxp
+soc_vendor: nxp
 arch: arm
 ram: 96
 flash: 256
