--- a/boards/arm/lpcxpresso55s69/lpcxpresso55s69_ns.yaml
+++ b/boards/arm/lpcxpresso55s69/lpcxpresso55s69_ns.yaml
@@ -7,6 +7,8 @@
 identifier: lpcxpresso55s69_ns
 name: NXP LPCXpresso55S69
 type: mcu
+board_vendor: nxp
+soc_vendor: nxp
 arch: arm
 ram: 136
 flash: 96
