--- a/boards/arm/mimxrt1010_evk/mimxrt1010_evk.yaml
+++ b/boards/arm/mimxrt1010_evk/mimxrt1010_evk.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt1010_evk
 name: NXP MIMXRT1010-EVK
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
