--- a/boards/arm/mimxrt1015_evk/mimxrt1015_evk.yaml
+++ b/boards/arm/mimxrt1015_evk/mimxrt1015_evk.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt1015_evk
 name: NXP MIMXRT1015-EVK
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
