--- a/boards/arm/mimxrt1060_evk/mimxrt1060_evkb.yaml
+++ b/boards/arm/mimxrt1060_evk/mimxrt1060_evkb.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt1060_evkb
 name: NXP MIMXRT1060-EVKB
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
