--- a/boards/arm/mimxrt1160_evk/mimxrt1160_evk_cm7.yaml
+++ b/boards/arm/mimxrt1160_evk/mimxrt1160_evk_cm7.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt1160_evk_cm7
 name: NXP MIMXRT1160-EVK CM7
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
