--- a/boards/arm/mimxrt1170_evk/mimxrt1170_evk_cm4.yaml
+++ b/boards/arm/mimxrt1170_evk/mimxrt1170_evk_cm4.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt1170_evk_cm4
 name: NXP MIMXRT1170-EVK CM4
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
