--- a/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.yaml
+++ b/boards/arm/mimxrt685_evk/mimxrt685_evk_cm33.yaml
@@ -8,6 +8,8 @@ identifier: mimxrt685_evk_cm33
 name: NXP MIMXRT685-EVK
 type: mcu
 arch: arm
+board_vendor: NXP
+soc_vendor: NXP
 toolchain:
   - zephyr
   - gnuarmemb
