--- a/boards/arm64/mimx8mn_evk/mimx8mn_evk_a53_smp.yaml
+++ b/boards/arm64/mimx8mn_evk/mimx8mn_evk_a53_smp.yaml
@@ -2,6 +2,8 @@ identifier: mimx8mn_evk_a53_smp
 name: NXP i.MX8M Nano EVK A53 with SMP kernel
 type: mcu
 arch: arm64
+board_vendor: nxp
+soc_vendor: nxp
 toolchain:
   - zephyr
   - cross-compile
