--- a/boards/arm64/mimx8mp_evk/mimx8mp_evk_a53.yaml
+++ b/boards/arm64/mimx8mp_evk/mimx8mp_evk_a53.yaml
@@ -2,6 +2,8 @@ identifier: mimx8mp_evk_a53
 name: NXP i.MX8M Plus EVK A53
 type: mcu
 arch: arm64
+board_vendor: nxp
+soc_vendor: nxp
 toolchain:
   - zephyr
   - cross-compile
