--- a/boards/arm64/nxp_ls1046ardb/nxp_ls1046ardb.yaml
+++ b/boards/arm64/nxp_ls1046ardb/nxp_ls1046ardb.yaml
@@ -2,6 +2,8 @@ identifier: nxp_ls1046ardb
 name: NXP LS1046ARDB on single CPU Core (NON-SMP)
 type: mcu
 arch: arm64
+board_vendor: nxp
+soc_vendor: nxp
 toolchain:
   - zephyr
   - cross-compile
