--- a/boards/arm64/nxp_ls1046ardb/nxp_ls1046ardb_smp_2cores.yaml
+++ b/boards/arm64/nxp_ls1046ardb/nxp_ls1046ardb_smp_2cores.yaml
@@ -2,6 +2,8 @@ identifier: nxp_ls1046ardb_smp_2cores
 name: NXP LS1046ARDB SMP on CPU Core2 and Core3
 type: mcu
 arch: arm64
+board_vendor: nxp
+soc_vendor: nxp
 toolchain:
   - zephyr
   - cross-compile
