--- a/boards/xtensa/nxp_adsp_imx8/nxp_adsp_imx8.yaml
+++ b/boards/xtensa/nxp_adsp_imx8/nxp_adsp_imx8.yaml
@@ -2,6 +2,8 @@ identifier: nxp_adsp_imx8
 name: i.MX8 DSP
 type: mcu
 arch: xtensa
+board_vendor: nxp
+soc_vendor: nxp
 toolchain:
   - zephyr
 testing:
