drivers: i3c: introduce I3C driver for NXP S32Z27 SoC
This introduces I3C driver for NXP S32Z27, the first version
only adds support minimal APIs to allow an I3C primary
controller can configure and communicate with I2C targets
on I3C bus

Issue: AZ-1135

Signed-off-by: Dat Nguyen Duy <dat.nguyenduy@nxp.com>

--- a/drivers/i3c/CMakeLists.txt
+++ b/drivers/i3c/CMakeLists.txt
@@ -23,3 +23,8 @@ zephyr_library_sources_ifdef(
   CONFIG_I3C_MCUX
   i3c_mcux.c
 )
+
+zephyr_library_sources_ifdef(
+  CONFIG_NXP_S32_I3C
+  i3c_nxp_s32.c
+)
