--- a/dts/x86/intel/elkhart_lake.dtsi
+++ b/dts/x86/intel/elkhart_lake.dtsi
@@ -54,12 +54,13 @@
 			status = "okay";
 		};
 
-		uart0: uart@f000 {
+		uart0: uart0 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x1e,0) PCIE_ID(0x8086,0x4b28)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b28>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -67,26 +68,13 @@
 			current-speed = <115200>;
 		};
 
-		uart1: uart@f100 {
+		uart1: uart1 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x1e,1) PCIE_ID(0x8086,0x4b29)>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b29>;
+
 			reg-shift = <2>;
-
-			clock-frequency = <1843200>;
-			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
-			interrupt-parent = <&intc>;
-
-			status = "okay";
-			current-speed = <115200>;
-		};
-
-		uart2: uart@ca00 {
-			compatible = "ns16550";
-
-			reg = <PCIE_BDF(0,0x19,2) PCIE_ID(0x8086,0x4b4d)>;
-			reg-shift = <2>;
-
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -95,12 +83,28 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_0: uart@8800 {
+		uart2: uart2 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,0) PCIE_ID(0x8086,0x4b96)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b4d>;
 
+			reg-shift = <2>;
+			clock-frequency = <1843200>;
+			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
+			interrupt-parent = <&intc>;
+
+			status = "okay";
+			current-speed = <115200>;
+		};
+
+		uart_pse_0: uart_pse_0 {
+			compatible = "ns16550";
+
+			vendor-id = <0x8086>;
+			device-id = <0x4b96>;
+
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -109,12 +113,13 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_1: uart@8900 {
+		uart_pse_1: uart_pse_1 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,1) PCIE_ID(0x8086,0x4b97)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b97>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -123,12 +128,13 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_2: uart@8a00 {
+		uart_pse_2: uart_pse_2 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,2) PCIE_ID(0x8086,0x4b98)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b98>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -137,12 +143,13 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_3: uart@8b00 {
+		uart_pse_3: uart_pse_3 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,3) PCIE_ID(0x8086,0x4b99)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b99>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -151,12 +158,13 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_4: uart@8c00 {
+		uart_pse_4: uart_pse_4 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,4) PCIE_ID(0x8086,0x4b9a)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b9a>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
@@ -165,12 +173,13 @@
 			current-speed = <115200>;
 		};
 
-		uart_pse_5: uart@8d00 {
+		uart_pse_5: uart_pse_5 {
 			compatible = "ns16550";
 
-			reg = <PCIE_BDF(0,0x11,5) PCIE_ID(0x8086,0x4b9b)>;
-			reg-shift = <2>;
+			vendor-id = <0x8086>;
+			device-id = <0x4b9b>;
 
+			reg-shift = <2>;
 			clock-frequency = <1843200>;
 			interrupts = <PCIE_IRQ_DETECT IRQ_TYPE_LOWEST_LEVEL_LOW 3>;
 			interrupt-parent = <&intc>;
