--- a/dts/bindings/serial/ns16550.yaml
+++ b/dts/bindings/serial/ns16550.yaml
@@ -2,12 +2,9 @@ description: ns16550 UART
 
 compatible: "ns16550"
 
-include: uart-controller.yaml
+include: [uart-controller.yaml, pcie-device.yaml]
 
 properties:
-    reg:
-      required: true
-
     reg-shift:
       type: int
       required: true
